--- a/src/index.html
+++ b/src/index.html
@@ -16,48 +16,58 @@
         <cpx-search-box>Search</cpx-search-box>
         <cpx-login><a href="#">Log in</a></cpx-login>
     </header>
-    <pfe-accordion>
-        <pfe-accordion-header>
-            <h2>My solution library</h2>
-        </pfe-accordion-header>
-        <pfe-accordion-panel expanded>
-            <p>In progress</p>
-            <p>Bookmarks</p>
-            <p>Completed solutions</p>
-        </pfe-accordion-panel>
-        <pfe-accordion-header>
-            <h2>Solution categories</h2>
-        </pfe-accordion-header>
-        <pfe-accordion-panel expanded>
-            <p>Populate from Service Call</p>
-        </pfe-accordion-panel>
-        <pfe-accordion-header>
-            <h2>Solution Authoring</h2>
-        </pfe-accordion-header>
-        <pfe-accordion-panel expanded>
-            <p>Authoring help</p>
-            <p>Solution editor</p>
-        </pfe-accordion-panel>
-    </pfe-accordion>
-    <pfe-band pfe-color="darker" pfe-aside-desktop="left" pfe-aside-mobile="top" pfe-aside-height="body">
-        <header slot="pfe-band--header">
-            <h1>How it works</h1>
-        </header>
-        <article>
-            <p>This content is here to introduce users to the idea of using this service. Ipsum faucibus vitae 
-                aliquet nec. Cursus eget nunc scelerisque viverra. Turpis nunc eget lorem dolor sed viverra. 
-                Cursus vitae congue mauris rhoncus. Justo donec enim diam vulputate ut pharetra sit amet aliquam. 
-                At urna condimentum mattis pellentesque id nibh tortor. Ullamcorper eget nulla facilisi etiam 
-                dignissim diam quis. Lacus vel facilisis volutpat est. Congue nisi vitae suscipit tellus mauris a. 
-                Sed felis eget velit aliquet sagittis id consectetur purus ut. Et malesuada fames ac turpis egestas 
-                sed tempus urna et. Nunc aliquet bibendum enim facilisis gravida neque convallis.</p>
-        </article>
-        <pfe-cta slot="pfe-band--footer" priority="primary">
-            <a href="#">Something</a> <img src="images/arrow-alt-circle-right.svg"> <a href="#">Something</a> <img src="images/arrow-alt-circle-right.svg"> <a href="#">Something</a> 
+    <nav>
+        <pfe-cta class="home" pfe-priority="primary">
+            <a href="#">Home</a>
         </pfe-cta>
-        <img slot="pfe-band--aside" height="50" width="50">
-    </pfe-band>
-    <cpx-solution-card></cpx-solution-card>
+        <pfe-accordion>
+            <pfe-accordion-header>
+                <h2>My solution library</h2>
+            </pfe-accordion-header>
+            <pfe-accordion-panel expanded>
+                <p>In progress</p>
+                <p>Bookmarks</p>
+                <p>Completed solutions</p>
+            </pfe-accordion-panel>
+            <pfe-accordion-header>
+                <h2>Solution categories</h2>
+            </pfe-accordion-header>
+            <pfe-accordion-panel expanded>
+                <p>Populate from Service Call</p>
+            </pfe-accordion-panel>
+            <pfe-accordion-header>
+                <h2>Solution Authoring</h2>
+            </pfe-accordion-header>
+            <pfe-accordion-panel expanded>
+                <p>Authoring help</p>
+                <p>Solution editor</p>
+            </pfe-accordion-panel>
+        </pfe-accordion>
+    </nav>
+    <main>
+        <pfe-band pfe-color="darker" pfe-aside-desktop="left" pfe-aside-mobile="top" pfe-aside-height="body">
+            <article>
+                <h1>How it works</h1>
+                <p>This content is here to introduce users to the idea of using this service. Ipsum faucibus vitae 
+                    aliquet nec. Cursus eget nunc scelerisque viverra. Turpis nunc eget lorem dolor sed viverra. 
+                    Cursus vitae congue mauris rhoncus. Justo donec enim diam vulputate ut pharetra sit amet aliquam. 
+                    At urna condimentum mattis pellentesque id nibh tortor. Ullamcorper eget nulla facilisi etiam 
+                    dignissim diam quis. Lacus vel facilisis volutpat est. Congue nisi vitae suscipit tellus mauris a. 
+                    Sed felis eget velit aliquet sagittis id consectetur purus ut. Et malesuada fames ac turpis egestas 
+                    sed tempus urna et. Nunc aliquet bibendum enim facilisis gravida neque convallis.</p>
+                    <a href="#">Something</a> <img src="images/arrow-alt-circle-right.svg"> <a href="#">Something</a> <img src="images/arrow-alt-circle-right.svg"> <a href="#">Something</a> 
+            </article>
+            <img slot="pfe-band--aside" height="50" width="50">
+        </pfe-band>
+        <section>
+            <cpx-solution-card status="in-progress" duration="30" complete="20" author="Contributor" >
+                <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
+                <h4>Contributor Name | <pfe-datetime datetime="January 1, 2010" type="local" day="numeric" month="long" year="numeric" locale="en-gb">January 1, 2010</pfe-datetime></h4>
+                <hr>
+                <p>Et sint proident amet aliqua aliquip. Ut eu cupidatat anim et consectetur amet ut anim duis enim sunt sunt. Mollit aliqua aliqua tempor velit nisi aute mollit Lorem aute. Sit magna ipsum velit occaecat velit deserunt quis. Adipisicing nulla do occaecat non. Dolor quis irure irure in proident qui.</p>
+            </cpx-solution-card>
+        </section>
+    </main>
     <cpx-user></cpx-user>
 
     <script type="module" src="scripts/pfe/pfe-accordion/dist/pfe-accordion.min.js"></script>
@@ -65,6 +75,7 @@
     <script type="module" src="scripts/pfe/pfe-band/dist/pfe-band.min.js"></script>
     <script type="module" src="scripts/pfe/pfe-badge/dist/pfe-badge.min.js"></script>
     <script type="module" src="scripts/pfe/pfe-datetime/dist/pfe-datetime.min.js"></script>
+    <script type="module" src="scripts/pfe/pfe-cta/dist/pfe-cta.min.js"></script>
     <script type="module" src="scripts/cpx-solution-card.js"></script>
     <script type="module" src="scripts/cpx-user.js"></script>
 </body>
